--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+body {
+  background-color: pink;
+  display: grid;
+  justify-content: space-around;
+  margin-top: 1em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn-primary{
+  margin: 1em;
+  background-color: #2196f3;
+  margin-left: 2em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.alwaysMid {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* .form {
+    background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/041.webp');
+    background-size: cover;
+    background-position: center;
+} */
