--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,4 +1,4 @@
-.form-control {
+/* .form-control {
   display: block;
   width: 80%;
   padding: .375rem .75rem;
@@ -16,4 +16,4 @@
 body {
   margin: 1em;
   background-color: lightpink;
-}
+} */
